<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#242B37"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".SignupActivity">

        <ProgressBar
            android:id="@+id/signup_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_gray"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_textinputlayout_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/rounded_edittext_login"
            app:layout_constraintBottom_toTopOf="@+id/signup_textinputlayout_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_textinputlayout_email">

            <EditText
                android:id="@+id/signup_textinputedittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_textinputlayout_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/rounded_edittext_login"
            app:layout_constraintBottom_toTopOf="@+id/signup_button_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_textinputlayout_password">

            <EditText
                android:id="@+id/signup_textinputedittext_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:drawablePadding="10dp"
                android:hint="@string/phone_number"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_textinputlayout_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/rounded_edittext_login"
            app:layout_constraintBottom_toTopOf="@+id/signup_textinputlayout_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_textinputlayout_surname">

            <EditText
                android:id="@+id/signup_textinputedittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signup_button_signup"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_selector"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_textinputlayout_phone" />


        <LinearLayout
            android:id="@+id/signup_textinputlayout_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_login"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/signup_textinputlayout_surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_logo">

            <Spinner
                android:id="@+id/signup_title_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:prompt="@string/title"
                android:spinnerMode="dialog" />

            <EditText
                android:id="@+id/signup_textinputedittext_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="-5dp"
                android:background="@null"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_textinputlayout_surname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/rounded_edittext_login"
            app:layout_constraintBottom_toTopOf="@+id/signup_textinputlayout_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_textinputlayout_name">

            <EditText
                android:id="@+id/signup_textinputedittext_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:drawablePadding="10dp"
                android:hint="@string/surname"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/signup_logo"
            android:layout_width="250dp"
            android:layout_height="126dp"
            android:layout_marginTop="16dp"
            android:contentDescription="Logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:srcCompat="@drawable/sociboard_white" />

        <ImageButton
            android:id="@+id/signup_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>